--- a/index.html
+++ b/index.html
@@ -617,8 +617,8 @@
                             <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=100" alt="SARAH" class="w-full h-full object-cover">
                         </div>
                         <div>
-                            <p class="text-sm font-semibold tracking-tight">Marcus Thompson</p>
-                            <p class="text-[10px] uppercase tracking-widest opacity-50">Design Director @ FlowState</p>
+                            <p class="text-sm font-semibold tracking-tight">Dr. Vasant Prabhu</p>
+                            <p class="text-[10px] uppercase tracking-widest opacity-50">Secretary @ MahaRERA</p>
                         </div>
                     </div>
                 </div>
@@ -633,7 +633,7 @@
                             <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?q=80&w=100" alt="ELENA" class="w-full h-full object-cover">
                         </div>
                         <div>
-                            <p class="text-sm font-semibold tracking-tight">Elena Rodriguez</p>
+                            <p class="text-sm font-semibold tracking-tight">Akash Chauhaan</p>
                             <p class="text-[10px] uppercase tracking-widest opacity-50">Product VP @ Lumina</p>
                         </div>
                     </div>
@@ -762,4 +762,5 @@
     </script>
 </body>
 </html>
+
 
