--- a/index.html
+++ b/index.html
@@ -651,9 +651,9 @@
                 </a>
             </div>
             <div class="flex gap-8">
-                <a href="#" class="text-sm border-b border-current pb-1 opacity-60 hover:opacity-100 transition-opacity">LinkedIn</a>
-                <a href="#" class="text-sm border-b border-current pb-1 opacity-60 hover:opacity-100 transition-opacity">Behance</a>
-                <a href="#" class="text-sm border-b border-current pb-1 opacity-60 hover:opacity-100 transition-opacity">Dribbble</a>
+                <a href="https://www.linkedin.com/in/gjuxdesigner/" class="text-sm border-b border-current pb-1 opacity-60 hover:opacity-100 transition-opacity" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                <a href="https://www.behance.net/ganeshjavhare" class="text-sm border-b border-current pb-1 opacity-60 hover:opacity-100 transition-opacity" target="_blank" rel="noopener noreferrer" >Behance</a>
+               
             </div>
         </div>
         <div class="max-w-7xl mx-auto mt-32 pt-12 border-t border-black/5 dark:border-white/5 flex flex-col md:flex-row justify-between gap-6 opacity-40 text-[10px] uppercase tracking-widest">
@@ -762,5 +762,6 @@
     </script>
 </body>
 </html>
+
 
 
