--- a/index.html
+++ b/index.html
@@ -494,11 +494,11 @@
                         
                         <div class="responsibilities-container">
                             <ul class="list-disc list-inside space-y-2 opacity-80 leading-relaxed text-sm pt-4 border-t border-black/5 dark:border-white/5 mt-4">
-                                <li>Achieved 95% accessibility scores by conducting rigorous evaluations and ensuring full GIGW compliance for government portals..</li>
                                 <li>Standardized end-to-end interfaces and design systems in Figma, reducing production iteration time by 25%..</li>
                                 <li>Orchestrated cross-functional teams and Jira-driven workflows to ensure 100% on-time delivery of complex digital features.</li>
+                                <li>Achieved 95% accessibility scores by conducting rigorous evaluations and ensuring full GIGW compliance for government portals..</li>
                                 <li>Oversaw UAT, API integrations, and vendor collaboration: Managed testing and integrations, reducing launch delays by 40%.</li>
-                                <li>Increased user engagement by 60% through strategic UX roadmaps and the delivery of user-friendly digital transformation projects.</li>
+                                <li>Increased user engagement by 60% (4Ml+) through strategic UX roadmaps and the delivery of user-friendly digital transformation projects.</li>
                                 <li>Led cross-departmental UX initiatives that boosted user satisfaction scores by 30% for large-scale public platforms </li>
                             </ul>
                         </div>
@@ -762,6 +762,7 @@
     </script>
 </body>
 </html>
+
 
 
 
