--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <style>
         :root {
             --bg: #F9F7F2;
-            --ink: #1A1A1A;
+            --ink: #999999;
             --muted: #666666;
             --accent: #E4572E;
             --nav-bg: rgba(249, 247, 242, 0.8);
@@ -762,6 +762,7 @@
     </script>
 </body>
 </html>
+
 
 
 
