--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <style>
         :root {
             --bg: #F9F7F2;
-            --ink: #999999;
+            --ink: #1A1A1A;
             --muted: #666666;
             --accent: #E4572E;
             --nav-bg: rgba(249, 247, 242, 0.8);
@@ -646,8 +646,8 @@
         <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-start md:items-center gap-12">
             <div>
                 <p class="text-xs uppercase tracking-widest opacity-50 mb-6">Let's build something together</p>
-                <a href="mailto:hello@gjuxdesign.in" class="serif text-4xl md:text-6xl lg:text-7xl hover:italic transition-all">
-                    hello@gjuxdesign.in
+                <a href="mailto:gjavhare@gmail.com" class="serif text-4xl md:text-6xl lg:text-7xl hover:italic transition-all">
+                    gjavhare@gmail.com
                 </a>
             </div>
             <div class="flex gap-8">
@@ -762,6 +762,7 @@
     </script>
 </body>
 </html>
+
 
 
 
