--- a/index.html
+++ b/index.html
@@ -646,8 +646,8 @@
         <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-start md:items-center gap-12">
             <div>
                 <p class="text-xs uppercase tracking-widest opacity-50 mb-6">Let's build something together</p>
-                <a href="mailto:gjavhare@gmail.com" class="serif text-4xl md:text-6xl lg:text-7xl hover:italic transition-all">
-                    gjavhare@gmail.com
+                <a href="mailto:gjavhare.ux@gmail.com" class="serif text-4xl md:text-6xl lg:text-7xl hover:italic transition-all">
+                    gjavhare.ux@gmail.com
                 </a>
             </div>
             <div class="flex gap-8">
@@ -762,6 +762,7 @@
     </script>
 </body>
 </html>
+
 
 
 
